--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "sql-model":"npx sequelize-cli model:generate --name User --attributes userName:string,name:string,email:string",
+    "db:create":"npx sequelize-cli db:create",
+    "db:drop":"npx sequelize-cli db:drop",
     "migrate":"npx sequelize-cli db:migrate",
     "down":"npx sequelize-cli db:migrate:undo",
     "make-seed":"npx sequelize-cli seed:generate --name demo-user",
